# pylcp

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_batch_scaling.py  benchmark_cpu_vs_gpu.py  benchmark_inner_steps.py  benchmark_jit_cache.py  benchmark_memory_model.py  benchmark_oom_fix.py  benchmark_setup.py  profile_cell.py
benchmarks/cpu_vs_gpu/: analyze.py  benchmark_cpu.py  benchmark_cpu.sh  benchmark_cpu_vs_gpu.py  benchmark_gpu.py  benchmark_gpu.sh  benchmark_output_20260318_191308.txt  benchmark_output_20260318_202558.txt  common.py
benchmarks/cpu_vs_gpu/run/: summary.txt
benchmarks/cpu_vs_gpu/run_20260323_114445/: benchmark_output.txt
benchmarks/gpu_atom_throughput/: benchmark.py  results.json  results.txt
benchmarks/gpu_memory_profile/: benchmark_gpu_memory.py
docs/: conf.py  installation.rst
docs/examples/MOTs/: 00_F0_to_F1_1D_MOT_forces.ipynb  01_F0_to_F1_1D_MOT_capture.ipynb  02_F0_to_F1_1D_MOT_OBE.ipynb  03_F0_to_F1_3D_MOT_OBE_temperature.ipynb  04_Fn_to_Fm_1D_MOT.ipynb  05_Fm_to_Fn_3D_MOT.ipynb  06_real_atoms_3D_MOT.ipynb  07_two_color_MOT.ipynb  10_recoil_limited_MOT.ipynb  20_CaF_MOT.ipynb
docs/examples/basics/: 01_power_broadening.ipynb  02_rabi_flopping.ipynb  03_damped_rabi_flopping.ipynb  04_adiabatic_passage.ipynb  05_optical_pumping_mag_field.ipynb  06_optical_pumping.ipynb  07_three_level_susceptibility.ipynb  08_stirap.ipynb
docs/examples/molasses/: 00_two_level_1D_molasses.ipynb  01_F0_to_F1_1D_molasses.ipynb  03_F_to_Fp_1D_molasses.ipynb
pylcp/: __init__.py  atom.py  common.py  fields.py  governingeq.py  gratings.py  hamiltonian.py  heuristiceq.py  integration_tools.py  integration_tools_gpu.py  obe.py  rateeq.py
pylcp/hamiltonians/: XFmolecules.py  __init__.py
simulations/: analysis.py  green_mot_sim.py  init_atoms.py  plotting.py
simulations/bb_red_mot/: bb_red_mot_sim.py  bb_red_mot_sim.sh  constants.py  plot.py
simulations/blue_mot/: blue_mot_final_state.npz  blue_mot_sim.py  blue_mot_sim.sh  blue_mot_simulation_data_analysis.txt  constants.py  gif_plot.py  plot.py
simulations/green_mot/: constants.py  gif_plot.py  green_mot_sim.py  plot.py
simulations/low_power_blue_mot/: constants.py  low_power_blue_mot_sim.py  low_power_blue_mot_sim.sh  plot.py
simulations/sf_red_mot/: constants.py  plot.py  sf_red_mot_sim.py  sf_red_mot_sim.sh
tests/: conftest.py  test_atom.py  test_common.py  test_fields.py  test_force_profile.py  test_governingeq.py  test_hamiltonian.py  test_hamiltonians.py  test_heuristiceq.py  test_integration_tools_gpu.py  test_multi_device_sharding.py  test_obe.py  test_rateeq.py
