[project]
name = "pylcp"
version = "2.0.0"
description = "A package for calculating laser cooling physics"
authors = [
    {name = "Stephen Eckel", email = "pylcp@googlegroups.com"},
    {name = "Daniel Barker"},
    {name = "Eric Norrgard"},
    {name = "Johan Palm", email = "johan.palm2000@gmail.com"}
]

license = {text = "NIST"}
readme = "README.md"
requires-python = ">=3.11, <4.0"
keywords = ["atomic physics", "laser cooling", "numerical integration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "diffrax (>=0.7.2,<0.8.0)",
    "jax[cuda12] (>=0.9.1,<0.10.0)",
]

[project.urls]
"Bug Tracker" = "https://github.com/JQIamo/pylcp/issues"
"Documentation" = "https://python-laser-cooling-physics.readthedocs.io/en/stable"
"Source Code" = "https://github.com/JQIamo/pylcp/"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "lmfit (>=1.3.4,<2.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)"
]
docs = [
    "sphinx",
    "nbsphinx",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "notebook (>=7.5.4,<8.0.0)",
    "sympy (>=1.14.0,<2.0.0)",
    "pathos (>=0.3.5,<0.4.0)"
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]
ignore = [
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
    "E402",  # module-level import not at top (needed for jax.config.update)
    "E731",  # lambda assignment (common for short physics expressions)
    "E741",  # ambiguous variable name (l, I, O are standard physics notation)
]

[tool.ruff.lint.per-file-ignores]
"pylcp/fields.py" = ["E501"]  # long LaTeX math in docstrings

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
include = ["pylcp"]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
filterwarnings = [
    # Diffrax does not officially support complex dtypes; expected when
    # transform_into_re_im=False is used in OBE.
    "ignore:Complex dtype.*support.*Diffrax:UserWarning",
]
